<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Krypto</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="last_logged">LastLogged</string>
    <string name="on_create">onCreate</string>
    <string name="last_logged_in">Last logged in:</string>
    <string name="blank" />
    <string name="enter_pin">Enter Your New PIN:</string>
    <string name="pin">Enter Your PIN:</string>
    <string name="star">*</string>
    <string name="confirm_pin">Confim PIN:</string>
    <string name="pin_do_not_match">PIN do not match.
        Try again…
    </string>
    <string name="pin_set">PIN set successfully!
        Logging in…
    </string>
    <string name="pin_correct">PIN correct</string>
    <string name="pin_incorrect">Incorrect PIN, try again</string>
    <string name="one">1</string>
    <string name="two">2\u0020ABC</string>
    <string name="three">3\u0020DEF</string>
    <string name="four">4\u0020GHI</string>
    <string name="five">5\u0020JKL</string>
    <string name="six">6\u0020MNO</string>
    <string name="seven">7\u0020PQRS</string>
    <string name="eight">8\u0020TUV</string>
    <string name="nine">9\u0020WXYZ</string>
    <string name="zero">0</string>
    <string name="on">1</string>
    <string name="th">3</string>
    <string name="tw">2</string>
    <string name="fo">4</string>
    <string name="fi">5</string>
    <string name="si">6</string>
    <string name="se">7</string>
    <string name="ei">8</string>
    <string name="ni">9</string>
    <string name="ze">0</string>
    <string name="about">About</string>
    <string name="licences">Licences</string>
    <string name="on_create_options">onCreateOptionsMenu</string>
    <string name="on_options_item_selected">onOptionsItemSelected</string>
    <string name="on_click">onClick</string>
    <string name="Menu">Menu</string>

</resources>
