<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/table"
        android:layout_alignParentTop="true"
        android:background="@color/background">

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/stripes"
            android:layout_alignParentTop="true"
            android:background="@color/stripes" />

        <com.bresiu.krypto.utils.widget.RobotoTextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pass"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/pin"
            android:textColor="@color/text_white"
            android:textSize="@dimen/font_size_medium"
            app:typeface="roboto_thin" />


        <com.bresiu.krypto.utils.widget.RobotoTextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_top"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/text_white"
            android:textSize="@dimen/font_size_medium"
            app:typeface="roboto_thin" />

        <LinearLayout
            android:id="@+id/progress"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/progress_height"
            android:layout_alignParentBottom="true"
            android:background="@color/stripes"
            android:baselineAligned="false"
            android:orientation="horizontal" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/stripes"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/on"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/tw"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/th"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/stripes">

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/fo"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/fi"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/si"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/stripes">

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/se"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/ei"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/ni"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/stripes"
            android:layout_marginTop="@dimen/stripes">

            <Button
                android:id="@+id/back_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:drawableStart="@drawable/content_backspace"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:textColor="@color/text_white"
                android:textSize="@dimen/num_pad_font_size" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:gravity="left|center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:text="@string/ze"
                android:textColor="@color/text_color"
                android:textSize="@dimen/num_pad_font_size"
                app:typeface="roboto_thin" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:drawableStart="@drawable/navigation_accept"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="@dimen/num_pad_left_margin"
                android:textSize="@dimen/num_pad_font_size" />
        </TableRow>
    </TableLayout>

    <com.bresiu.krypto.utils.SlidingLayer xmlns:slidingLayer="http://schemas.android.com/apk/res/com.bresiu.krypto"
        android:id="@+id/slidingMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sliding_layer_height"
        slidingLayer:closeOnTapEnabled="true"
        slidingLayer:stickTo="top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:padding="@dimen/three">

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/licences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/five"
                android:layout_marginTop="@dimen/five"
                android:background="@drawable/button"
                android:gravity="left"
                android:onClick="onClick"
                android:padding="@dimen/ten"
                android:text="@string/licences"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoButton
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/licences"
                android:layout_below="@+id/licences"
                android:layout_marginLeft="@dimen/five"
                android:layout_marginTop="@dimen/five"
                android:background="@drawable/button"
                android:gravity="left"
                android:onClick="onClick"
                android:padding="@dimen/ten"
                android:text="@string/about"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color"
                app:typeface="roboto_thin" />

            <com.bresiu.krypto.utils.widget.RobotoTextView
                android:id="@+id/last_logged_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color"
                app:typeface="roboto_thin" />

        </RelativeLayout>

    </com.bresiu.krypto.utils.SlidingLayer>

</RelativeLayout>